подправил TransactionFilter